Logo devidamente posicionado

--- a/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
+++ b/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -21,15 +21,25 @@
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <edgeInsets key="layoutMargins" top="-142" left="695" bottom="1015" right="-59"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoMarvel" translatesAutoresizingMaskIntoConstraints="NO" id="JV6-vS-tJR">
+                                <rect key="frame" x="109" y="106" width="197" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="197" id="hqn-3B-MXt"/>
+                                    <constraint firstAttribute="height" constant="140" id="zje-mC-JvU"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kDH-aJ-4ZD"/>
                         <color key="backgroundColor" red="0.0018300657389999999" green="0.065738312899999998" blue="0.11562288549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.0018300657389999999" green="0.065738312899999998" blue="0.11562288549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="kDH-aJ-4ZD" firstAttribute="trailing" secondItem="JV6-vS-tJR" secondAttribute="trailing" constant="108" id="4ap-CO-vgB"/>
+                            <constraint firstItem="JV6-vS-tJR" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" constant="109" id="F9R-Rp-Iti"/>
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" id="Hwj-dS-5Y4"/>
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="top" secondItem="r3A-mG-FqV" secondAttribute="top" constant="-43" id="KND-Um-yhW"/>
                             <constraint firstAttribute="bottom" secondItem="Y7C-gQ-M47" secondAttribute="bottom" constant="-60" id="NXe-df-mRw"/>
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="trailing" secondItem="kDH-aJ-4ZD" secondAttribute="trailing" id="T7o-VQ-Obg"/>
+                            <constraint firstItem="JV6-vS-tJR" firstAttribute="top" secondItem="kDH-aJ-4ZD" secondAttribute="top" constant="62" id="vvf-AA-8EC"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -40,5 +50,6 @@
     </scenes>
     <resources>
         <image name="LoginScreen-1" width="231.66667175292969" height="338.33334350585938"/>
+        <image name="LogoMarvel" width="66" height="47"/>
     </resources>
 </document>
