--- a/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
+++ b/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -28,6 +28,40 @@
                                     <constraint firstAttribute="height" constant="140" id="zje-mC-JvU"/>
                                 </constraints>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="67" translatesAutoresizingMaskIntoConstraints="NO" id="2Bi-jr-7Dk">
+                                <rect key="frame" x="71" y="387" width="272" height="236"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="CPF" borderStyle="roundedRect" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="5RL-3h-VYL">
+                                        <rect key="frame" x="0.0" y="0.0" width="272" height="34"/>
+                                        <color key="backgroundColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="ZFI-oK-At7">
+                                        <rect key="frame" x="0.0" y="101" width="272" height="34"/>
+                                        <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Confirm Password" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="hKW-Qr-a6R">
+                                        <rect key="frame" x="0.0" y="202" width="272" height="34"/>
+                                        <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <rect key="contentStretch" x="0.0" y="1" width="1" height="1"/>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Reset Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xY-qz-cl3">
+                                <rect key="frame" x="140" y="280" width="134" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kDH-aJ-4ZD"/>
                         <color key="backgroundColor" red="0.0018300657389999999" green="0.065738312899999998" blue="0.11562288549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -39,7 +73,9 @@
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="top" secondItem="r3A-mG-FqV" secondAttribute="top" constant="-43" id="KND-Um-yhW"/>
                             <constraint firstAttribute="bottom" secondItem="Y7C-gQ-M47" secondAttribute="bottom" constant="-60" id="NXe-df-mRw"/>
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="trailing" secondItem="kDH-aJ-4ZD" secondAttribute="trailing" id="T7o-VQ-Obg"/>
+                            <constraint firstItem="kDH-aJ-4ZD" firstAttribute="trailing" secondItem="2Bi-jr-7Dk" secondAttribute="trailing" constant="71" id="qIE-4Q-hOz"/>
                             <constraint firstItem="JV6-vS-tJR" firstAttribute="top" secondItem="kDH-aJ-4ZD" secondAttribute="top" constant="62" id="vvf-AA-8EC"/>
+                            <constraint firstItem="2Bi-jr-7Dk" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" constant="71" id="zQ7-st-aBV"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -50,6 +86,6 @@
     </scenes>
     <resources>
         <image name="LoginScreen-1" width="231.66667175292969" height="338.33334350585938"/>
-        <image name="LogoMarvel" width="66" height="47"/>
+        <image name="LogoMarvel" width="65.666664123535156" height="46.666667938232422"/>
     </resources>
 </document>
