Adicionei mais 2 botões e modifiquei algumas constraints

--- a/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
+++ b/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,35 +30,72 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="67" translatesAutoresizingMaskIntoConstraints="NO" id="2Bi-jr-7Dk">
-                                <rect key="frame" x="71" y="387" width="272" height="236"/>
+                                <rect key="frame" x="65" y="346" width="284" height="329"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="CPF" borderStyle="roundedRect" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="5RL-3h-VYL">
-                                        <rect key="frame" x="0.0" y="0.0" width="272" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="284" height="65"/>
                                         <color key="backgroundColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="273" id="8av-PZ-V4R"/>
+                                            <constraint firstAttribute="height" constant="65" id="PZf-ok-BjU"/>
+                                        </constraints>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="ZFI-oK-At7">
-                                        <rect key="frame" x="0.0" y="101" width="272" height="34"/>
+                                        <rect key="frame" x="0.0" y="132" width="284" height="65"/>
                                         <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="65" id="Hal-Me-dXU"/>
+                                            <constraint firstAttribute="width" constant="273" id="f56-6z-RjB"/>
+                                        </constraints>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Confirm Password" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="hKW-Qr-a6R">
-                                        <rect key="frame" x="0.0" y="202" width="272" height="34"/>
+                                        <rect key="frame" x="0.0" y="264" width="284" height="65"/>
                                         <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="273" id="3lj-5h-PCN"/>
+                                            <constraint firstAttribute="height" constant="65" id="LgL-Uo-kri"/>
+                                        </constraints>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
                                 <rect key="contentStretch" x="0.0" y="1" width="1" height="1"/>
+                                <constraints>
+                                    <constraint firstItem="ZFI-oK-At7" firstAttribute="height" secondItem="5RL-3h-VYL" secondAttribute="height" id="Wg5-wm-3MN"/>
+                                    <constraint firstItem="ZFI-oK-At7" firstAttribute="width" secondItem="5RL-3h-VYL" secondAttribute="width" id="Z19-m1-zwN"/>
+                                    <constraint firstItem="hKW-Qr-a6R" firstAttribute="width" secondItem="ZFI-oK-At7" secondAttribute="width" id="aJ3-b9-uOW"/>
+                                    <constraint firstItem="hKW-Qr-a6R" firstAttribute="height" secondItem="ZFI-oK-At7" secondAttribute="height" id="h06-4C-U8y"/>
+                                </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Reset Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xY-qz-cl3">
-                                <rect key="frame" x="140" y="280" width="134" height="18"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZcU-Vt-rtb">
+                                <rect key="frame" x="65" y="730" width="284" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.066666666669999999" blue="0.1137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" name="AccentColor"/>
+                                <state key="normal" title="UPDATE">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nye-G7-Stt">
+                                <rect key="frame" x="188" y="811" width="38" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Reset Password" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xY-qz-cl3">
+                                <rect key="frame" x="140" y="280" width="134" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="2SW-Qm-Rd4"/>
+                                    <constraint firstAttribute="width" constant="134" id="hWV-Yx-rXT"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -68,14 +106,15 @@
                         <color key="tintColor" red="0.0018300657389999999" green="0.065738312899999998" blue="0.11562288549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="kDH-aJ-4ZD" firstAttribute="trailing" secondItem="JV6-vS-tJR" secondAttribute="trailing" constant="108" id="4ap-CO-vgB"/>
+                            <constraint firstItem="2Bi-jr-7Dk" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" constant="65" id="8le-YD-e0G"/>
                             <constraint firstItem="JV6-vS-tJR" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" constant="109" id="F9R-Rp-Iti"/>
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" id="Hwj-dS-5Y4"/>
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="top" secondItem="r3A-mG-FqV" secondAttribute="top" constant="-43" id="KND-Um-yhW"/>
                             <constraint firstAttribute="bottom" secondItem="Y7C-gQ-M47" secondAttribute="bottom" constant="-60" id="NXe-df-mRw"/>
+                            <constraint firstItem="2Bi-jr-7Dk" firstAttribute="top" secondItem="8xY-qz-cl3" secondAttribute="bottom" constant="48" id="O3o-bm-sN9"/>
                             <constraint firstItem="Y7C-gQ-M47" firstAttribute="trailing" secondItem="kDH-aJ-4ZD" secondAttribute="trailing" id="T7o-VQ-Obg"/>
-                            <constraint firstItem="kDH-aJ-4ZD" firstAttribute="trailing" secondItem="2Bi-jr-7Dk" secondAttribute="trailing" constant="71" id="qIE-4Q-hOz"/>
+                            <constraint firstItem="kDH-aJ-4ZD" firstAttribute="trailing" secondItem="2Bi-jr-7Dk" secondAttribute="trailing" constant="65" id="UJ7-bF-PbE"/>
                             <constraint firstItem="JV6-vS-tJR" firstAttribute="top" secondItem="kDH-aJ-4ZD" secondAttribute="top" constant="62" id="vvf-AA-8EC"/>
-                            <constraint firstItem="2Bi-jr-7Dk" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" constant="71" id="zQ7-st-aBV"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -86,6 +125,9 @@
     </scenes>
     <resources>
         <image name="LoginScreen-1" width="231.66667175292969" height="338.33334350585938"/>
-        <image name="LogoMarvel" width="65.666664123535156" height="46.666667938232422"/>
+        <image name="LogoMarvel" width="66" height="47"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
